# zadanie-4

./: README.md  monopoly.c  monopoly.h
z4_project/z4/: CMakeLists.txt
z4_project/z4/src/: z4.c
